AS/TP-as/TP5/AS-TP-2014-files/_build/arithpar.automaton
State 0:
start' -> . start [ # ]
-- On WHILE shift to state 1
-- On VAR shift to state 91
-- On TRUE shift to state 4
-- On STRING shift to state 5
-- On OPENP shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On IF shift to state 53
-- On FOR shift to state 55
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On DO shift to state 57
-- On ACOPEN shift to state 58
-- On terminated_stmt shift to state 95
-- On start2 shift to state 96
-- On start shift to state 98
-- On loop shift to state 77
-- On exprC shift to state 99
-- On exprB shift to state 12
-- On expr shift to state 100
-- On assignable shift to state 65

State 1:
terminated_stmt -> WHILE . expr terminated_stmt [ WHILE EOF ELSE ]
-- On VAR shift to state 2
-- On TRUE shift to state 4
-- On STRING shift to state 5
-- On OPENP shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On exprB shift to state 12
-- On expr shift to state 48

State 2:
expr -> VAR . [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
expr -> VAR . OPEN expr CLOSE [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
-- On OPEN shift to state 3
-- On WHILE reduce production expr -> VAR 
-- On VAR reduce production expr -> VAR 
-- On TIMES reduce production expr -> VAR 
-- On PV reduce production expr -> VAR 
-- On PLUS reduce production expr -> VAR 
-- On OR reduce production expr -> VAR 
-- On NEQ reduce production expr -> VAR 
-- On MINUS reduce production expr -> VAR 
-- On LT reduce production expr -> VAR 
-- On LEQ reduce production expr -> VAR 
-- On INTE reduce production expr -> VAR 
-- On IF reduce production expr -> VAR 
-- On GT reduce production expr -> VAR 
-- On GEQ reduce production expr -> VAR 
-- On FOR reduce production expr -> VAR 
-- On EQ reduce production expr -> VAR 
-- On EOF reduce production expr -> VAR 
-- On DO reduce production expr -> VAR 
-- On DIVIDE reduce production expr -> VAR 
-- On DEUP reduce production expr -> VAR 
-- On CLOSEP reduce production expr -> VAR 
-- On CLOSE reduce production expr -> VAR 
-- On AND reduce production expr -> VAR 
-- On ACOPEN reduce production expr -> VAR 

State 3:
expr -> VAR OPEN . expr CLOSE [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
-- On VAR shift to state 2
-- On TRUE shift to state 4
-- On STRING shift to state 5
-- On OPENP shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On exprB shift to state 12
-- On expr shift to state 46

State 4:
exprB -> TRUE . [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
-- On WHILE reduce production exprB -> TRUE 
-- On VAR reduce production exprB -> TRUE 
-- On TIMES reduce production exprB -> TRUE 
-- On PV reduce production exprB -> TRUE 
-- On PLUS reduce production exprB -> TRUE 
-- On OR reduce production exprB -> TRUE 
-- On NEQ reduce production exprB -> TRUE 
-- On MINUS reduce production exprB -> TRUE 
-- On LT reduce production exprB -> TRUE 
-- On LEQ reduce production exprB -> TRUE 
-- On INTE reduce production exprB -> TRUE 
-- On IF reduce production exprB -> TRUE 
-- On GT reduce production exprB -> TRUE 
-- On GEQ reduce production exprB -> TRUE 
-- On FOR reduce production exprB -> TRUE 
-- On EQ reduce production exprB -> TRUE 
-- On EOF reduce production exprB -> TRUE 
-- On DO reduce production exprB -> TRUE 
-- On DIVIDE reduce production exprB -> TRUE 
-- On DEUP reduce production exprB -> TRUE 
-- On CLOSEP reduce production exprB -> TRUE 
-- On CLOSE reduce production exprB -> TRUE 
-- On AND reduce production exprB -> TRUE 
-- On ACOPEN reduce production exprB -> TRUE 

State 5:
expr -> STRING . [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
-- On WHILE reduce production expr -> STRING 
-- On VAR reduce production expr -> STRING 
-- On TIMES reduce production expr -> STRING 
-- On PV reduce production expr -> STRING 
-- On PLUS reduce production expr -> STRING 
-- On OR reduce production expr -> STRING 
-- On NEQ reduce production expr -> STRING 
-- On MINUS reduce production expr -> STRING 
-- On LT reduce production expr -> STRING 
-- On LEQ reduce production expr -> STRING 
-- On INTE reduce production expr -> STRING 
-- On IF reduce production expr -> STRING 
-- On GT reduce production expr -> STRING 
-- On GEQ reduce production expr -> STRING 
-- On FOR reduce production expr -> STRING 
-- On EQ reduce production expr -> STRING 
-- On EOF reduce production expr -> STRING 
-- On DO reduce production expr -> STRING 
-- On DIVIDE reduce production expr -> STRING 
-- On DEUP reduce production expr -> STRING 
-- On CLOSEP reduce production expr -> STRING 
-- On CLOSE reduce production expr -> STRING 
-- On AND reduce production expr -> STRING 
-- On ACOPEN reduce production expr -> STRING 

State 6:
exprB -> OPENP . exprB CLOSEP [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
-- On VAR shift to state 2
-- On TRUE shift to state 4
-- On STRING shift to state 5
-- On OPENP shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On exprB shift to state 44
-- On expr shift to state 15

State 7:
expr -> NOT . expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
-- On VAR shift to state 2
-- On TRUE shift to state 4
-- On STRING shift to state 5
-- On OPENP shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On exprB shift to state 12
-- On expr shift to state 43

State 8:
expr -> MINUS . expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
-- On VAR shift to state 2
-- On TRUE shift to state 4
-- On STRING shift to state 5
-- On OPENP shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On exprB shift to state 12
-- On expr shift to state 42

State 9:
expr -> INT . [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
-- On WHILE reduce production expr -> INT 
-- On VAR reduce production expr -> INT 
-- On TIMES reduce production expr -> INT 
-- On PV reduce production expr -> INT 
-- On PLUS reduce production expr -> INT 
-- On OR reduce production expr -> INT 
-- On NEQ reduce production expr -> INT 
-- On MINUS reduce production expr -> INT 
-- On LT reduce production expr -> INT 
-- On LEQ reduce production expr -> INT 
-- On INTE reduce production expr -> INT 
-- On IF reduce production expr -> INT 
-- On GT reduce production expr -> INT 
-- On GEQ reduce production expr -> INT 
-- On FOR reduce production expr -> INT 
-- On EQ reduce production expr -> INT 
-- On EOF reduce production expr -> INT 
-- On DO reduce production expr -> INT 
-- On DIVIDE reduce production expr -> INT 
-- On DEUP reduce production expr -> INT 
-- On CLOSEP reduce production expr -> INT 
-- On CLOSE reduce production expr -> INT 
-- On AND reduce production expr -> INT 
-- On ACOPEN reduce production expr -> INT 

State 10:
expr -> FLOAT . [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
-- On WHILE reduce production expr -> FLOAT 
-- On VAR reduce production expr -> FLOAT 
-- On TIMES reduce production expr -> FLOAT 
-- On PV reduce production expr -> FLOAT 
-- On PLUS reduce production expr -> FLOAT 
-- On OR reduce production expr -> FLOAT 
-- On NEQ reduce production expr -> FLOAT 
-- On MINUS reduce production expr -> FLOAT 
-- On LT reduce production expr -> FLOAT 
-- On LEQ reduce production expr -> FLOAT 
-- On INTE reduce production expr -> FLOAT 
-- On IF reduce production expr -> FLOAT 
-- On GT reduce production expr -> FLOAT 
-- On GEQ reduce production expr -> FLOAT 
-- On FOR reduce production expr -> FLOAT 
-- On EQ reduce production expr -> FLOAT 
-- On EOF reduce production expr -> FLOAT 
-- On DO reduce production expr -> FLOAT 
-- On DIVIDE reduce production expr -> FLOAT 
-- On DEUP reduce production expr -> FLOAT 
-- On CLOSEP reduce production expr -> FLOAT 
-- On CLOSE reduce production expr -> FLOAT 
-- On AND reduce production expr -> FLOAT 
-- On ACOPEN reduce production expr -> FLOAT 

State 11:
exprB -> FALSE . [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
-- On WHILE reduce production exprB -> FALSE 
-- On VAR reduce production exprB -> FALSE 
-- On TIMES reduce production exprB -> FALSE 
-- On PV reduce production exprB -> FALSE 
-- On PLUS reduce production exprB -> FALSE 
-- On OR reduce production exprB -> FALSE 
-- On NEQ reduce production exprB -> FALSE 
-- On MINUS reduce production exprB -> FALSE 
-- On LT reduce production exprB -> FALSE 
-- On LEQ reduce production exprB -> FALSE 
-- On INTE reduce production exprB -> FALSE 
-- On IF reduce production exprB -> FALSE 
-- On GT reduce production exprB -> FALSE 
-- On GEQ reduce production exprB -> FALSE 
-- On FOR reduce production exprB -> FALSE 
-- On EQ reduce production exprB -> FALSE 
-- On EOF reduce production exprB -> FALSE 
-- On DO reduce production exprB -> FALSE 
-- On DIVIDE reduce production exprB -> FALSE 
-- On DEUP reduce production exprB -> FALSE 
-- On CLOSEP reduce production exprB -> FALSE 
-- On CLOSE reduce production exprB -> FALSE 
-- On AND reduce production exprB -> FALSE 
-- On ACOPEN reduce production exprB -> FALSE 

State 12:
expr -> exprB . [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
exprB -> exprB . AND exprB [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
exprB -> exprB . OR exprB [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
-- On OR shift to state 13
-- On AND shift to state 40
-- On WHILE reduce production expr -> exprB 
-- On VAR reduce production expr -> exprB 
-- On TIMES reduce production expr -> exprB 
-- On PV reduce production expr -> exprB 
-- On PLUS reduce production expr -> exprB 
-- On OR reduce production expr -> exprB 
-- On NEQ reduce production expr -> exprB 
-- On MINUS reduce production expr -> exprB 
-- On LT reduce production expr -> exprB 
-- On LEQ reduce production expr -> exprB 
-- On INTE reduce production expr -> exprB 
-- On IF reduce production expr -> exprB 
-- On GT reduce production expr -> exprB 
-- On GEQ reduce production expr -> exprB 
-- On FOR reduce production expr -> exprB 
-- On EQ reduce production expr -> exprB 
-- On EOF reduce production expr -> exprB 
-- On DO reduce production expr -> exprB 
-- On DIVIDE reduce production expr -> exprB 
-- On DEUP reduce production expr -> exprB 
-- On CLOSEP reduce production expr -> exprB 
-- On CLOSE reduce production expr -> exprB 
-- On AND reduce production expr -> exprB 
-- On ACOPEN reduce production expr -> exprB 
** Conflict on OR AND

State 13:
exprB -> exprB OR . exprB [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
-- On VAR shift to state 2
-- On TRUE shift to state 4
-- On STRING shift to state 5
-- On OPENP shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On exprB shift to state 14
-- On expr shift to state 15

State 14:
expr -> exprB . [ TIMES PLUS NEQ MINUS LT LEQ INTE GT GEQ EQ DIVIDE ]
exprB -> exprB . AND exprB [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
exprB -> exprB . OR exprB [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
exprB -> exprB OR exprB . [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
-- On WHILE reduce production exprB -> exprB OR exprB 
-- On VAR reduce production exprB -> exprB OR exprB 
-- On TIMES reduce production expr -> exprB 
-- On TIMES reduce production exprB -> exprB OR exprB 
-- On PV reduce production exprB -> exprB OR exprB 
-- On PLUS reduce production expr -> exprB 
-- On PLUS reduce production exprB -> exprB OR exprB 
-- On OR reduce production exprB -> exprB OR exprB 
-- On NEQ reduce production expr -> exprB 
-- On NEQ reduce production exprB -> exprB OR exprB 
-- On MINUS reduce production expr -> exprB 
-- On MINUS reduce production exprB -> exprB OR exprB 
-- On LT reduce production expr -> exprB 
-- On LT reduce production exprB -> exprB OR exprB 
-- On LEQ reduce production expr -> exprB 
-- On LEQ reduce production exprB -> exprB OR exprB 
-- On INTE reduce production expr -> exprB 
-- On INTE reduce production exprB -> exprB OR exprB 
-- On IF reduce production exprB -> exprB OR exprB 
-- On GT reduce production expr -> exprB 
-- On GT reduce production exprB -> exprB OR exprB 
-- On GEQ reduce production expr -> exprB 
-- On GEQ reduce production exprB -> exprB OR exprB 
-- On FOR reduce production exprB -> exprB OR exprB 
-- On EQ reduce production expr -> exprB 
-- On EQ reduce production exprB -> exprB OR exprB 
-- On EOF reduce production exprB -> exprB OR exprB 
-- On DO reduce production exprB -> exprB OR exprB 
-- On DIVIDE reduce production expr -> exprB 
-- On DIVIDE reduce production exprB -> exprB OR exprB 
-- On DEUP reduce production exprB -> exprB OR exprB 
-- On CLOSEP reduce production exprB -> exprB OR exprB 
-- On CLOSE reduce production exprB -> exprB OR exprB 
-- On AND reduce production exprB -> exprB OR exprB 
-- On ACOPEN reduce production exprB -> exprB OR exprB 
** Conflict on TIMES PLUS NEQ MINUS LT LEQ INTE GT GEQ EQ DIVIDE

State 15:
expr -> expr . PLUS expr [ TIMES PLUS NEQ MINUS LT LEQ INTE GT GEQ EQ DIVIDE ]
expr -> expr . TIMES expr [ TIMES PLUS NEQ MINUS LT LEQ INTE GT GEQ EQ DIVIDE ]
expr -> expr . MINUS expr [ TIMES PLUS NEQ MINUS LT LEQ INTE GT GEQ EQ DIVIDE ]
expr -> expr . DIVIDE expr [ TIMES PLUS NEQ MINUS LT LEQ INTE GT GEQ EQ DIVIDE ]
expr -> expr . INTE expr DEUP expr [ TIMES PLUS NEQ MINUS LT LEQ INTE GT GEQ EQ DIVIDE ]
exprB -> expr . EQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
exprB -> expr . NEQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
exprB -> expr . LT expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
exprB -> expr . GT expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
exprB -> expr . LEQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
exprB -> expr . GEQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
-- On TIMES shift to state 16
-- On PLUS shift to state 18
-- On NEQ shift to state 22
-- On MINUS shift to state 24
-- On LT shift to state 26
-- On LEQ shift to state 28
-- On INTE shift to state 34
-- On GT shift to state 30
-- On GEQ shift to state 32
-- On EQ shift to state 36
-- On DIVIDE shift to state 20

State 16:
expr -> expr TIMES . expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
-- On VAR shift to state 2
-- On TRUE shift to state 4
-- On STRING shift to state 5
-- On OPENP shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On exprB shift to state 12
-- On expr shift to state 17

State 17:
expr -> expr . PLUS expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
expr -> expr . TIMES expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
expr -> expr TIMES expr . [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
expr -> expr . MINUS expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
expr -> expr . DIVIDE expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
expr -> expr . INTE expr DEUP expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
exprB -> expr . EQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
exprB -> expr . NEQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
exprB -> expr . LT expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
exprB -> expr . GT expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
exprB -> expr . LEQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
exprB -> expr . GEQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
-- On WHILE reduce production expr -> expr TIMES expr 
-- On VAR reduce production expr -> expr TIMES expr 
-- On TIMES reduce production expr -> expr TIMES expr 
-- On PV reduce production expr -> expr TIMES expr 
-- On PLUS reduce production expr -> expr TIMES expr 
-- On OR reduce production expr -> expr TIMES expr 
-- On NEQ reduce production expr -> expr TIMES expr 
-- On MINUS reduce production expr -> expr TIMES expr 
-- On LT reduce production expr -> expr TIMES expr 
-- On LEQ reduce production expr -> expr TIMES expr 
-- On INTE reduce production expr -> expr TIMES expr 
-- On IF reduce production expr -> expr TIMES expr 
-- On GT reduce production expr -> expr TIMES expr 
-- On GEQ reduce production expr -> expr TIMES expr 
-- On FOR reduce production expr -> expr TIMES expr 
-- On EQ reduce production expr -> expr TIMES expr 
-- On EOF reduce production expr -> expr TIMES expr 
-- On DO reduce production expr -> expr TIMES expr 
-- On DIVIDE reduce production expr -> expr TIMES expr 
-- On DEUP reduce production expr -> expr TIMES expr 
-- On CLOSEP reduce production expr -> expr TIMES expr 
-- On CLOSE reduce production expr -> expr TIMES expr 
-- On AND reduce production expr -> expr TIMES expr 
-- On ACOPEN reduce production expr -> expr TIMES expr 

State 18:
expr -> expr PLUS . expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ INTE IF GT GEQ FOR EQ EOF DO DIVIDE DEUP CLOSEP CLOSE AND ACOPEN ]
-- On VAR shift to state 2
-- On TRUE shift to state 4
-- On STRING shift to state 5
-- On OPENP shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On exprB shift to state 12
-- On expr shift to state 19
